feat: secure Google Gmail authentication