@@ -1,8 +1,9 @@
 package com.indiedev.orders_hub.gmail.client;
 
 import com.indiedev.orders_hub.gmail.dto.GmailMessageSummary;
-import com.indiedev.orders_hub.gmail.exception.GmailApiException;
+import com.indiedev.orders_hub.gmail.exception.GoogleApiException;
 import org.springframework.stereotype.Component;
+import org.springframework.util.StringUtils;
 import org.springframework.web.client.RestClient;
 import org.springframework.web.client.RestClientException;
 
@@ -13,8 +14,6 @@ import java.util.List;
 public class GmailApiClient {
 
     static final String GMAIL_BASE_URL = "https://gmail.googleapis.com";
-    static final String ORDER_SEARCH_QUERY =
-            "subject:(order OR ordered OR shipped OR delivered OR dispatched OR invoice) newer_than:1y";
 
     private final RestClient restClient;
 
@@ -22,64 +21,66 @@ public class GmailApiClient {
         this.restClient = restClientBuilder.baseUrl(GMAIL_BASE_URL).build();
     }
 
-    public GmailProfile getProfile(String accessToken) {
+    public String getProfileEmail(String accessToken) {
         try {
-            GmailProfile profile = restClient.get()
+            ProfileResponse profile = restClient.get()
                     .uri("/gmail/v1/users/me/profile")
                     .headers(headers -> headers.setBearerAuth(accessToken))
                     .retrieve()
-                    .body(GmailProfile.class);
-            if (profile == null || profile.emailAddress() == null || profile.emailAddress().isBlank()) {
-                throw new GmailApiException("Gmail profile response did not include an email address", null);
+                    .body(ProfileResponse.class);
+            if (profile == null || !StringUtils.hasText(profile.emailAddress())) {
+                throw new GoogleApiException("Gmail profile response did not include an email address");
             }
-            return profile;
-        } catch (GmailApiException exception) {
+            return profile.emailAddress();
+        } catch (GoogleApiException exception) {
             throw exception;
         } catch (RestClientException exception) {
-            throw new GmailApiException("Unable to fetch Gmail profile", exception);
+            throw new GoogleApiException("Unable to fetch Gmail profile", exception);
         }
     }
 
-    public List<GmailMessageSummary> searchOrderEmails(String accessToken) {
+    public MessagePage listMessageIds(
+            String accessToken,
+            String query,
+            int maxResults
+    ) {
         try {
             MessageListResponse response = restClient.get()
                     .uri(uriBuilder -> uriBuilder
                             .path("/gmail/v1/users/me/messages")
-                            .queryParam("maxResults", 10)
-                            .queryParam("q", ORDER_SEARCH_QUERY)
-                            .build())
+                            .queryParam("maxResults", maxResults)
+                            .queryParam("q", "{gmailQuery}")
+                            .build(query))
                     .headers(headers -> headers.setBearerAuth(accessToken))
                     .retrieve()
                     .body(MessageListResponse.class);
 
-            List<MessageReference> references = response == null || response.messages() == null
-                    ? Collections.emptyList()
-                    : response.messages();
-
-            return references.stream()
-                    .map(reference -> getMessageMetadata(accessToken, reference.id()))
-                    .toList();
-        } catch (GmailApiException exception) {
-            throw exception;
+            if (response == null) {
+                return new MessagePage(List.of(), false);
+            }
+            List<String> messageIds = response.messages() == null
+                    ? List.of()
+                    : response.messages().stream().map(MessageReference::id).toList();
+            return new MessagePage(messageIds, StringUtils.hasText(response.nextPageToken()));
         } catch (RestClientException exception) {
-            throw new GmailApiException("Unable to search Gmail messages", exception);
+            throw new GoogleApiException("Unable to search Gmail messages", exception);
         }
     }
 
-    private GmailMessageSummary getMessageMetadata(String accessToken, String messageId) {
+    public GmailMessageSummary getMessageMetadata(String accessToken, String gmailMessageId) {
         try {
             MessageResponse response = restClient.get()
                     .uri(uriBuilder -> uriBuilder
                             .path("/gmail/v1/users/me/messages/{messageId}")
                             .queryParam("format", "metadata")
-                            .queryParam("metadataHeaders", "Subject", "From", "Date")
-                            .build(messageId))
+                            .queryParam("metadataHeaders", "Subject", "From", "Date", "Message-ID")
+                            .build(gmailMessageId))
                     .headers(headers -> headers.setBearerAuth(accessToken))
                     .retrieve()
                     .body(MessageResponse.class);
 
             if (response == null) {
-                throw new GmailApiException("Gmail message metadata response was empty", null);
+                throw new GoogleApiException("Gmail message metadata response was empty");
             }
 
             List<MessageHeader> headers = response.payload() == null || response.payload().headers() == null
@@ -91,12 +92,13 @@ public class GmailApiClient {
                     response.threadId(),
                     headerValue(headers, "Subject"),
                     headerValue(headers, "From"),
-                    headerValue(headers, "Date")
+                    headerValue(headers, "Date"),
+                    headerValue(headers, "Message-ID")
             );
-        } catch (GmailApiException exception) {
+        } catch (GoogleApiException exception) {
             throw exception;
         } catch (RestClientException exception) {
-            throw new GmailApiException("Unable to fetch Gmail message metadata", exception);
+            throw new GoogleApiException("Unable to fetch Gmail message metadata", exception);
         }
     }
 
@@ -108,18 +110,27 @@ public class GmailApiClient {
                 .orElse(null);
     }
 
-    record MessageListResponse(List<MessageReference> messages) {
+    public record MessagePage(List<String> messageIds, boolean hasNextPage) {
+        public MessagePage {
+            messageIds = List.copyOf(messageIds);
+        }
     }
 
-    record MessageReference(String id, String threadId) {
+    private record ProfileResponse(String emailAddress) {
     }
 
-    record MessageResponse(String id, String threadId, MessagePayload payload) {
+    private record MessageListResponse(List<MessageReference> messages, String nextPageToken) {
     }
 
-    record MessagePayload(List<MessageHeader> headers) {
+    private record MessageReference(String id) {
     }
 
-    record MessageHeader(String name, String value) {
+    private record MessageResponse(String id, String threadId, MessagePayload payload) {
+    }
+
+    private record MessagePayload(List<MessageHeader> headers) {
+    }
+
+    private record MessageHeader(String name, String value) {
     }
 }
